<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Puzzle 15</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
	<string name="high_scores">High Scores</string>
	<string name="rules">Rules</string>
	<string name="quick_game">Quick Game</string>
	<string name="about">About</string>
	<string name="capture_photo">Capture Photo</string>
	<string name="classical_board">Classical Board</string>
	<string name="start_game">Start Game</string>
  	<string name="take">Take!</string>
</resources>
