<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical" >

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/quick_game_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/quick_game" />

    <Button
        android:id="@+id/high_scores_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/high_scores" />

    <Button
        android:id="@+id/rules_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/rules" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/about" />

</LinearLayout>
